[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.dependencies]
attune = { path = "packages/attune" }

aws-config = "1.6.1"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.82.0"
aws-sigv4 = "1.3.3"
axum = { version = "0.8.3", features = ["macros", "multipart"] }
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
colored = "3.0.0"
debian-packaging = "0.18.0"
digest = "0.10.7"
futures-util = "0.3.31"
gpgme = "0.11.0"
hex = "0.4.3"
http = "1.3.1"
inquire = "0.7.5"
md-5 = "0.10.6"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
tabled = "0.20.0"
tabwriter = "1.4.1"
time = { version = "0.3.41", features = ["formatting", "serde"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["auth", "catch-panic", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
