[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.dependencies]
attune = { path = "packages/attune" }
attune-macros = { path = "packages/attune-macros" }

# HACK: This version is pinned to work around crc-fast-rust#14[^1] and should be
# removed once that issue is resolved. ANY WORKSPACE PACKAGE THAT RELIES ON
# `aws-sdk-s3` MUST DIRECTLY PIN `crc-fast`.
#
# [^1]: https://github.com/awesomized/crc-fast-rust/issues/14
crc-fast = "= 1.3.0"

async-tempfile = "0.7.0"
aws-config = "1.6.1"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.82.0"
aws-sigv4 = "1.3.3"
axum = { version = "0.8.3", features = ["macros", "multipart"] }
axum-test = { version = "17.3.0", features = ["all"] }
backon = "1.6.0"
base64 = "0.22.1"
bollard = "0.19.1"
bon = "3.6.5"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.5"
colored = "3.0.0"
debian-packaging = "0.18.0"
derivative = "2.2.0"
digest = "0.10.7"
dotenv = "0.15.0"
futures-util = "0.3.31"
git-version = "0.3.9"
gpgme = "0.11.0"
hex = "0.4.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
indoc = "2.0.6"
inquire = "0.7.5"
itertools = "0.14.0"
lazy-regex = "3.4.1"
md-5 = "0.10.6"
percent-encoding = "2.3.1"
pgp = "0.16.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
tabled = "0.20.0"
tabwriter = "1.4.1"
tar = "0.4.44"
test-log = "0.2.18"
testcontainers = "0.25.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "serde"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["auth", "catch-panic", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
workspace_root = "0.1.2"
