[package]
name = "controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.82.0"
axum = { version = "0.8.3", features = ["macros"] }
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
