[package]
name = "controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"
axum = { version = "0.8.3", features = ["macros", "multipart"] }
clap = { version = "4.5.35", features = ["derive"] }
debian-packaging = "0.18.0"
hex = "0.4.3"
md-5 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.41", features = ["formatting", "serde"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
